--- a/_config.yml
+++ b/_config.yml
@@ -93,11 +93,11 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: hexo-theme-next
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/zhaops-hub/zhaops-hub.github.io
+  repo: https://github.com/zhaops-hub/zhaops-hub.github.io.git
   branch: master
